Add page chi-siamo

--- a/pitagoraDev/templates/home.html
+++ b/pitagoraDev/templates/home.html
@@ -345,7 +345,7 @@
       </div>
       <div class="links">
         <a href="#" class="active">Home</a>
-        <a href="#">Chi siamo</a>
+        <a href="/chi-siamo">Chi siamo</a>
         <div class="dropdown">
           <a href="#">Servizi <i class="bi bi-chevron-down"></i></a>
           <div class="dropdown-content">
@@ -621,6 +621,7 @@
       </div>
     </div>
   </section>
+  {% include "footer.html" %}
 
 </body>
 
