Add page contatti

--- a/pitagoraDev/templates/chi_siamo.html
+++ b/pitagoraDev/templates/chi_siamo.html
@@ -19,6 +19,10 @@
 
 <body>
 
+  <div style="height: 140px; background-color: #C18774;">
+    {% include "navbar.html" %}
+  </div>
+
   <div class="container">
     <div class="row">
       <div class="col p-5 bg-light">
@@ -51,6 +55,13 @@
           salute, equilibrio e benessere duraturo, con la comodità di un punto di riferimento completo e facilmente
           accessibile nel quartiere Borgo Nuovo.
         </p>
+        <div class="button-right">
+          <a href="/contatti" class="btn text-white rounded-pill px-4"
+            style="background-color:#C18774; text-decoration:none;">
+            PRENOTA UNA PRIMA CONSULENZA
+          </a>
+        </div>
+
       </div>
     </div>
   </div>
