--- a/pitagoraDev/templates/navbar.html
+++ b/pitagoraDev/templates/navbar.html
@@ -131,7 +131,7 @@
         <a href="#">Massoterapia</a>
       </div>
     </div>
-    <a href="#">Contatti</a>
+    <a href="/contatti">Contatti</a>
   </div>
   <div class="button-right">
     <button onclick="window.location.href='mailto:alessandro@logopedistarigamonti.com'">PRENOTA <i
