--- a/pitagoraDev/templates/home.html
+++ b/pitagoraDev/templates/home.html
@@ -11,18 +11,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <style>
-    /* @font-face {
+    @font-face {
       font-family: "ItsRonda";
       src: url("{% static 'fonts/its_ronda_font.otf' %}") format("opentype");
       font-weight: normal;
       font-style: normal;
-    } */
+    }
 
     body {
       margin: 0;
       padding: 0;
       /* overflow: hidden; */
-      /* font-family: "ItsRonda", sans-serif; */
+      /* font-family: "ItsRonda"; */
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
 
@@ -40,130 +40,17 @@
     #video-section {
       width: 100%;
       height: 100vh;
-      /* Occupa l'intera viewport */
       position: relative;
       overflow: hidden;
     }
 
-    #orange-section {
+    #home-title {
       margin-top: 550px;
       width: 100%;
       height: 100vh;
       padding-left: 15%;
       box-sizing: border-box;
     }
-
-    .navbar {
-      left: 50%;
-      transform: translateX(-50%);
-      height: 70px;
-      margin: 40px auto 0;
-      width: 70%;
-      background-color: white;
-      color: #000;
-      padding: 0 30px;
-      border-radius: 50px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      position: absolute;
-      z-index: 10;
-    }
-
-    .navbar a {
-      color: white;
-      text-decoration: none;
-      margin: 0 20px;
-    }
-
-    .navbar a:hover {
-      text-decoration: underline;
-    }
-
-    .logo {
-      justify-self: start;
-    }
-
-    .logo img {
-      height: 50px;
-      border-radius: 50px;
-      object-fit: cover;
-    }
-
-    .links {
-      display: flex;
-      gap: 50px;
-      font-weight: bold;
-      font-size: 16px;
-      letter-spacing: 1px;
-    }
-
-    .links a {
-      color: black;
-      text-decoration: none;
-    }
-
-    .links a:hover {
-      color: #4ba2a6;
-    }
-
-    .links a.active {
-      color: #4ba2a6;
-    }
-
-    .button-right button {
-      background-color: #4ba2a6;
-      color: white;
-      padding: 12px 30px;
-      border: none;
-      border-radius: 40px;
-      font-weight: bold;
-      font-size: 14px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    .button-right button:hover {
-      background-color: #3b8d91;
-    }
-
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: white;
-      padding: 10px;
-      border-radius: 10px;
-      top: 100%;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 1;
-      min-width: 150px;
-    }
-
-    .dropdown-content a {
-      display: block;
-      padding: 5px;
-      color: black;
-      text-align: left;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #555;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-
 
     #blue-section {
       width: 100%;
@@ -278,53 +165,6 @@
       display: block;
     }
 
-    .cerchi-container {
-      display: flex;
-      gap: 5px;
-    }
-
-    .cerchio {
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      display: inline-block;
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
-
-    @keyframes bounceUp {
-
-      0%,
-      100% {
-        transform: translateY(0);
-      }
-
-      50% {
-        transform: translateY(-5px);
-      }
-    }
-
-    /* Quando il container è in hover, animiamo i cerchi con delay sfalsato */
-    .cerchi-container:hover .cerchio {
-      animation: bounceUp 0.4s ease-in-out;
-    }
-
-    .cerchi-container:hover .cerchio:nth-child(1) {
-      animation-delay: 0s;
-    }
-
-    .cerchi-container:hover .cerchio:nth-child(2) {
-      animation-delay: 0.1s;
-    }
-
-    .cerchi-container:hover .cerchio:nth-child(3) {
-      animation-delay: 0.2s;
-    }
-
-    .cerchi-container:hover .cerchio:nth-child(4) {
-      animation-delay: 0.3s;
-    }
-
     .triangolo {
       width: 100px;
       height: 100px;
@@ -339,32 +179,8 @@
     <video id="video-background" autoplay muted loop playsinline>
       <source src="{% static 'video/background.mp4' %}" type="video/mp4">
     </video>
-    <div class="navbar text-uppercase">
-      <div class="logo">
-        <a href="/"><img src="{% static 'img/logosenzasfondo.png' %}" alt="Studio Pitagora"></a>
-      </div>
-      <div class="links">
-        <a href="#" class="active">Home</a>
-        <a href="/chi-siamo">Chi siamo</a>
-        <div class="dropdown">
-          <a href="#">Servizi <i class="bi bi-chevron-down"></i></a>
-          <div class="dropdown-content">
-            <a href="#">Logopedia</a>
-            <a href="#">Psicoterapia</a>
-            <a href="#">Psicologia dell'età evolutiva / Tutor DSA</a>
-            <a href="#">TNPEE</a>
-            <a href="#">Osteopatia D.O. e Chinesiologia</a>
-            <a href="#">Massoterapia</a>
-          </div>
-        </div>
-        <a href="#">Contatti</a>
-      </div>
-      <div class="button-right">
-        <button onclick="window.location.href='mailto:alessandro@logopedistarigamonti.com'">PRENOTA <i
-            class="bi bi-arrow-right-circle-fill"></i></button>
-      </div>
-    </div>
-    <section id="orange-section">
+    {% include "navbar.html" %}
+    <section id="home-title">
       <h1 style="font-size: 100px; color: white;">Studio Pitagora</h1>
       <h1 style="font-size: 40px; color: white;">Servizi rieducativi e riabilitativi</h1>
     </section>
@@ -376,12 +192,7 @@
         <div class="yellow-text">
           <h1 style="font-weight: bold;">Benvenuti a Studio Pitagora</h1>
           <h3 style="font-weight: bold;">Il nostro approccio</h3>
-          <div class="cerchi-container">
-            <span class="cerchio" style="background-color: #87B5C4;"></span>
-            <span class="cerchio" style="background-color: #C44325;"></span>
-            <span class="cerchio" style="background-color: #F8B451;"></span>
-            <span class="cerchio" style="background-color: #000000;"></span>
-          </div>
+          {% include "cerchi.html" %}
           <p>A Studio Pitagora mettiamo al centro la persona, creando un percorso di supporto clinico che nasce
             dall'ascolto attento e dalla fiducia reciproca.
             Crediamo che ogni difficoltà, sia essa di natura logopedica, posturale, fisica o emotiva, vada affrontata
@@ -477,12 +288,7 @@
       <div class="row">
         <div class="col-6 col-md-3 d-flex flex-column">
           <h2 style="font-weight: bold;">I nostri servizi <br>
-            <div class="cerchi-container">
-              <span class="cerchio" style="background-color: #87B5C4;"></span>
-              <span class="cerchio" style="background-color: #C44325;"></span>
-              <span class="cerchio" style="background-color: #F8B451;"></span>
-              <span class="cerchio" style="background-color: #000000;"></span>
-            </div>
+            {% include "cerchi.html" %}
           </h2>
           <img src="{% static 'img/imm_1.jpeg' %}" alt="img1" class="my-3" style="border-radius: 12px;">
         </div>
@@ -500,6 +306,7 @@
         </div>
       </div>
     </div>
+
     <!-- <div class="column text-column">
         <h2 style="font-weight: bold;">I nostri servizi <br>
           <div class="cerchi-container">
@@ -569,12 +376,7 @@
           <h4 style="color: #3b8d91;">Perchè sceglierci</h4>
           <h2 style="font-weight: bold;">Studio Pitagora - Servizi Integrati per il benessere e lo sviluppo della
             persona</h2>
-          <div class="cerchi-container">
-            <span class="cerchio" style="background-color: #87B5C4;"></span>
-            <span class="cerchio" style="background-color: #C44325;"></span>
-            <span class="cerchio" style="background-color: #F8B451;"></span>
-            <span class="cerchio" style="background-color: #000000;"></span>
-          </div>
+          {% include "cerchi.html" %}
           <p>
           <p style="font-weight: bold;">Studio Pitagora</p> è un centro dedicato alla presa in carico di bisogni
           complessi in ambito evolutivo, educativo, clinico e relazionale. Accogliamo bambini, adolescenti, adulti e
@@ -607,12 +409,7 @@
       <div class="yellow-left">
         <div class="yellow-text">
           <h2 style="font-weight: bold;">Formazione e Progetti</h2>
-          <div class="cerchi-container">
-            <span class="cerchio" style="background-color: #87B5C4;"></span>
-            <span class="cerchio" style="background-color: #C44325;"></span>
-            <span class="cerchio" style="background-color: #F8B451;"></span>
-            <span class="cerchio" style="background-color: #000000;"></span>
-          </div>
+          {% include "cerchi.html" %}
           <p>Studio Alke è attivamente impegnato in progetti educativi nelle scuole dell’infanzia e primarie, oltre a
             percorsi di formazione dedicati a famiglie, insegnanti e professionisti. L’obiettivo è rispondere
             concretamente ai bisogni del territorio e favorire una crescita condivisa.
