Add doctors pages

--- a/pitagoraDev/templates/footer.html
+++ b/pitagoraDev/templates/footer.html
@@ -26,12 +26,13 @@
         <h4 class="mb-3" style="color: #99E2CB;">RISORSE UTILI</h4>
         <p>Privacy Policy</p>
         <p>Cookie Policy</p>
-        <p>Logopedia</p>
-        <p>Psicoterapia</p>
-        <p>Psicologia dell'età evolutiva / Tutor DSA</p>
-        <p>TNPEE</p>
-        <p>Osteopatia D.O. e Chinesiologia</p>
-        <p>Massoterapia</p>
+        <p><a href="/logopedia" style="text-decoration: none; color: inherit;">Logopedia</a></p>
+        <p><a href="/psicoterapia" style="text-decoration: none; color: inherit;">Psicoterapia</a></p>
+        <p><a href="/psicologia" style="text-decoration: none; color: inherit;">Psicologia dell'età evolutiva / Tutor
+            DSA</a></p>
+        <p><a href="/tnpee" style="text-decoration: none; color: inherit;">TNPEE</a></p>
+        <p><a href="/osteopatia" style="text-decoration: none; color: inherit;">Osteopatia D.O. e Chinesiologia</a></p>
+        <p><a href="/massoterapia" style="text-decoration: none; color: inherit;">Massoterapia</a></p>
 
       </div>
       <div class="col-md-4 mb-3">
