--- a/pitagoraDev/templates/navbar.html
+++ b/pitagoraDev/templates/navbar.html
@@ -123,12 +123,12 @@
     <div class="dropdown">
       <a href="#">Servizi <i class="bi bi-chevron-down"></i></a>
       <div class="dropdown-content">
-        <a href="#">Logopedia</a>
-        <a href="#">Psicoterapia</a>
-        <a href="#">Psicologia dell'età evolutiva / Tutor DSA</a>
-        <a href="#">TNPEE</a>
-        <a href="#">Osteopatia D.O. e Chinesiologia</a>
-        <a href="#">Massoterapia</a>
+        <a href="/logopedia">Logopedia</a>
+        <a href="/psicoterapia">Psicoterapia</a>
+        <a href="/psicologia">Psicologia dell'età evolutiva / Tutor DSA</a>
+        <a href="/tnpee">TNPEE</a>
+        <a href="/osteopatia">Osteopatia D.O. e Chinesiologia</a>
+        <a href="/massoterapia">Massoterapia</a>
       </div>
     </div>
     <a href="/contatti">Contatti</a>
